Edited up until compilation
Holy I have so many weird notes ...

--- a/CS 246.md
+++ b/CS 246.md
@@ -6,17 +6,17 @@ Note: Shell/bash will not be tested on the final exam.
   * debugging implies that there is a known bug
   * you don't *know* if there are bugs until you test
 * test do not prove correctness - only wrongness
-* Human testing: code reviews, walking through
-* Machine testing: black/grey/white box tests, i.e. how much you know about program
-  * black box
+* **human testing**: code reviews, walking through
+* **machine testing**: black/grey/white box tests, i.e. how much you know about program
+  * **black box**
     * various classes of input: positive/negative integers, numeric ranges
-    * edge cases: boundaries of valid data
-    * corner cases: multiple simultaneous boundaries
-  * white box
+    * **edge cases**: boundaries of valid data
+    * **corner cases**: multiple simultaneous boundaries
+  * **white box**
     * make sure you test every single line of code (think Racket with the black highlights)
     * execute all logical paths
-    * performance testing: is the program fast enough?
-    * regression testing: if you rewrite something, will it break old (previously passed) test cases?
+    * **performance testing**: is the program fast enough?
+    * **regression testing**: if you rewrite something, will it break old (previously passed) test cases?
 
 ## Intro to C++
 ```C++
@@ -38,7 +38,7 @@ int main() {
 
 ## I/O streams
 * `#include <iostream>` to print
-* `<iomanip`> if you want to change how you print somehow
+* `<iomanip>` if you want to change how you print somehow
 * `<fstream>` to read from files
 * `<sstream>` to use string streams
 * `cin`, `cout`, `cerr` are the 3 streams
@@ -60,7 +60,7 @@ int main() {
 * file streams are easier in C++ than in C!
   * don't have to manually open/close files - once it goes out of scope, destructor called
     * can use `f.is_open()` to check if the file is open
-* **STRINGSTREAMS ARE A THING**
+* stringstreams
   * How it works:
   * istringstream: strings go in, things come out
   * ostringstream: things go in, strings come out
@@ -69,14 +69,13 @@ int main() {
 ## Working with Strings
 * `#include <string>` for all the magic
 * C-style strings are an array of `char`s ended by `\0` but C++ style strings grow/shrink as needed
-  * no longer need to realloc all the time !!!
+  * no longer need to `realloc` all the time !!!
 * most of the operations are the same as C-style strings tbh
-* I wrote "more funtimes in the notes" BUT I DON'T HAVE EXTRA NOTES LITERALLY WHY
 
-## Function Overloading **pls review ???**
-* defined multiple times
+## Function Overloading
+* a.k.a. functions defined multiple times
 * different return types
-* overloaded functions can have the same number of arguments (but must be different kinds)
+* overloaded functions can have the same number of arguments (but must be different types)
 
 ## References
 * L-values: think of them as a dereferenced const ptr
@@ -110,7 +109,7 @@ g(5); // allowed - you can't change it anyways so why not?
 * create an array of references: `int &r[3] = {x, y, z};`
   * WHY ??? would you want to do that thing
 
-## Compilation (Lecture 7)
+## Compilation
 `g++ -std=C++14 -Wall hello.cc -o hello`
 * `g++`: the compiler lmfao
 * `std=C++14`: using C++14 standard
