Updated until map

--- a/CS 246.md
+++ b/CS 246.md
@@ -168,7 +168,7 @@ clean: " clean up your directory after making
   * B needs one of A's methods (A is a pointer field in B)
 
 ## Classes and Objects (Lecture 8)
-**class**: basically a struct, but fields are private by default (unlike struct)
+**class**: basically a `struct`, but fields are private by default (unlike `struct`)
   * you can put functions in a class!
     * called *member function* (or *method*)
     * adding `const` after a method declaration is a promise not to modify object field
@@ -207,7 +207,7 @@ clean: " clean up your directory after making
   * don't be fancy schmancy dude
 
 * classes can be initialized using C-style
-  * e.g. `Student billy {60, 70, 80}`
+  * e.g. `Student billy {60, 70, 80};`
 * better: **constructor**: method that does initialization for you!
   * can continue to use C-style syntax
   * if it exists, args passed
@@ -252,11 +252,11 @@ class Text: public Book {
 Use the keyword `explicit` to prevent implicit conversion if the object only has one argument.
 * will not compile
 
-* Order:
-  * Space allocated
-  * Superclass part is constructed (if using inheritance)
-  * Fields' constructors run in declaration order (regardless of MIL)
-  * Constructor body runs
+Order:
+  1. Space allocated
+  2. Superclass part is constructed (if using inheritance)
+  3. Fields' constructors run in declaration order (regardless of MIL)
+  4. Constructor body runs
 
 ### Big 5
 
@@ -394,7 +394,6 @@ Text &Text::operator=(Text&& other) {
   * other soln: use accessor/mutator methods (getters + setters)
     * e.g. `int getSize()` or `void setName(string name)`
 
-**end of midterm material !!!**
 ---
 
 ## System Modelling: UML
@@ -559,8 +558,7 @@ Virtual method calls uncur overhead cost (small) in time and space.
 
 ## Templates
 **template**: class parameterized by a type
-
-# PLEASE LEARN ABOUT TEMPLATES [Lecture 16]
+* Lecture 16 is all about templates (pls look @)
 
 ### Standard Template Library
 * large number of useful templates to use when coding (makes ur life so much easier)
